data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2238.wast
;; 9. **Test Description**: Multiple nested blocks with intervening branches, ensuring error detection for incorrect block closures.    **Constraint**: Proper closure and verification of intervening blocks when branching.    **Relation to Mismanagement**: Validates multiple block nesting and their proper closure when branches intervene.    ```    block    ;; level 0      block  ;; level 1        block  ;; level 2          br 0         end      ;; missing end here    end    ```

(assert_malformed 
  (module 
    (func $nested-blocks-with-missing-end
      (block
        (block
          (block
            (br 0)
          )
        )
      )
    )
  )
  "unexpected end of section or function"
)